# server/Routes/userRoute.js
@@ -14,6 +14,7 @@ router.delete('/income',userController.deleteIncome)
 router.put('/income', userController.updateIncome)
 router.get('/income/year/months',userController.incomeYearSum)
 router.get('/income/months/:month/types', userController.incomeMonthSum)
+router.get('/income' ,userController.getByUserAndInc)
 
 router.post('/expense/:id', userController.addExpense)
 router.get('/expense/:id',userController.getAllExpenseByUser)
@@ -21,6 +22,7 @@ router.delete('/expense',userController.deleteExpense)
 router.put('/expense',userController.updateExpense)
 router.get('/expense/year/months',userController.expenseYearSum)
 router.get('/expense/months/:month/types', userController.expenseMonthSum)
+router.get('/expense' ,userController.getByUserAndExp)
 
 router.get('/money/:id', userController.getAllByUser)
 router.get('/alltype/:month', userController.getIncAndExpByMonth)
